--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 document.title = "Browser Source - open source browser"
 </script>
 <link rel="icon" href="https://raw.githubusercontent.com/justatesting1/BrowserWebLegacy/master/browser_source_icon.png">
+<center><h1>The download link is broken, give me a few minutes and I'll fix it. - OldBo5</h1></center>
 <center><h1>Browser Source - open source browser</h1></center>
 <center><h1>Update v0.0.1 - Release!</h1></center>
 <center>Browser Source is an open source browser made with the help of a YouTube tutorial.</center>
