--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 document.title = "Browser Source - open source browser"
 </script>
 <link rel="icon" href="https://raw.githubusercontent.com/justatesting1/BrowserWebLegacy/master/browser_source_icon.png">
-<center><h1>The download link is broken, give me a few minutes and I'll fix it. - OldBo5</h1></center>
+<center><h1>Fixed the download link, sorry for the inconvenience! - OldBo5</h1></center>
 <center><h1>Browser Source - open source browser</h1></center>
 <center><h1>Update v0.0.1 - Release!</h1></center>
 <center>Browser Source is an open source browser made with the help of a YouTube tutorial.</center>
-<center><a href="https://github.com/justatesting1/BrowserSourceLatest/raw/master/BrowserSourceBeta.exe">Download</a></center>
+<center><a href="https://uc66101fd93b92f4618f1aff6115.dl.dropboxusercontent.com/cd/0/get/Aa963zLUpkv_Q5vJqsIZ6yawIOPRDJ8hlYey8rKkbBz0CYlpH2-j4TqtfOq5ELc-3QuaCYq0j1_ORr2sS2JGifm63e0cz66oezj3gCU8RljyTg/file#">Download</a></center>
 <center><a href="https://ucda8b8fc32b870c15c5c3e6a090.dl.dropboxusercontent.com/cd/0/get/Aa-Ips4zjzFYatOX-CuAWp9b7BmdwOspGN1QUhUFxPfhS9PTWwOobHiSrh_R7eaZ9A29Rep7j0EXIcEM8LIvhMUt7ahAjHVIezYAC-DNejV0RQ/file?dl=1#">Download source</a></center>
 <center><img src="https://raw.githubusercontent.com/justatesting1/NotepadWeb/master/notcommonlydownloaded.PNG" alt="Not Commonly Downloaded"></center>
 <center>If you get this, click the ^ arrow and click Keep.</center>
