--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 document.title = "Browser Source - open source browser"
 </script>
 <link rel="icon" href="https://raw.githubusercontent.com/justatesting1/BrowserWebLegacy/master/browser_source_icon.png">
-<center><h1>You're gonna have to go to the installation folder where you installed, the default is C:\Program Files (x86)\BrowserSource</h1></center>
+<center><h1>You're gonna have to go to the installation folder where you installed to open the browser (BrowserSourceBeta.exe), the default is C:\Program Files (x86)\BrowserSource</h1></center>
 <center><h1>Fixed the download link, sorry for the inconvenience! - OldBo5</h1></center>
 <center><h1>Browser Source - open source browser</h1></center>
 <center><h1>Update v0.0.1 - Release!</h1></center>
