--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ document.title = "Browser Source - open source browser"
 <center><h1>You're gonna have to go to the installation folder where you installed to open the browser (BrowserSourceBeta.exe), the default is C:\Program Files (x86)\BrowserSource</h1></center>
 <center><h1>Fixed the download link, sorry for the inconvenience! - OldBo5</h1></center>
 <center><h1>Browser Source - open source browser</h1></center>
-<center><h1>Update v0.0.1 - Release!</h1></center>
+<center><h1>Update v1.1 - Added a new tab page, added About section, and added last compiled date.</h1></center>
 <center>Browser Source is an open source browser made with the help of a YouTube tutorial.</center>
-<center><a href="https://uc66101fd93b92f4618f1aff6115.dl.dropboxusercontent.com/cd/0/get/Aa963zLUpkv_Q5vJqsIZ6yawIOPRDJ8hlYey8rKkbBz0CYlpH2-j4TqtfOq5ELc-3QuaCYq0j1_ORr2sS2JGifm63e0cz66oezj3gCU8RljyTg/file#">Download</a></center>
-<center><a href="https://ucda8b8fc32b870c15c5c3e6a090.dl.dropboxusercontent.com/cd/0/get/Aa-Ips4zjzFYatOX-CuAWp9b7BmdwOspGN1QUhUFxPfhS9PTWwOobHiSrh_R7eaZ9A29Rep7j0EXIcEM8LIvhMUt7ahAjHVIezYAC-DNejV0RQ/file?dl=1#">Download source</a></center>
+<center><a href="https://ucd4aa33e038ec86b0b2f7a03560.dl.dropboxusercontent.com/cd/0/get/AbzSO_jFPLLosbL5371-xArmU0RR344IOP0xobmYVlxsIOeOFa2wUkiFuQci3ALUXSHeAaCj2djkCvHmfWY1I-u4WVVwzGRlr5iBiieMJMYChg/file#?dl=1">Download</a></center>
+<center><a href="https://uc1b150a2bfc5fa3f6c3ffb27ea3.dl.dropboxusercontent.com/cd/0/get/AbxNo8hRct5c1C4AWbzWiCnHz1iDwaJ3WIHYTJS0WsiyRzn-TtVSaniFxpPnxWSDsnnQRJ2W7jbvXSLn6b9CGGg9rcauf6MvE07iSl1u8jvtAQ/file#?dl=1">Download source</a></center>
 <center><img src="https://raw.githubusercontent.com/justatesting1/NotepadWeb/master/notcommonlydownloaded.PNG" alt="Not Commonly Downloaded"></center>
 <center>If you get this, click the ^ arrow and click Keep.</center>
 <center><img src="https://raw.githubusercontent.com/justatesting1/NotepadWeb/master/protected.PNG" alt="Windows protected your PC"></center>
