--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ document.title = "Browser Source - open source browser"
 <center><h1>Browser Source - open source browser</h1></center>
 <center><h1>Update v1.1 - Added a new tab page, added About section, and added last compiled date.</h1></center>
 <center>Browser Source is an open source browser made with the help of a YouTube tutorial.</center>
-<center><a href="https://ucd4aa33e038ec86b0b2f7a03560.dl.dropboxusercontent.com/cd/0/get/AbzSO_jFPLLosbL5371-xArmU0RR344IOP0xobmYVlxsIOeOFa2wUkiFuQci3ALUXSHeAaCj2djkCvHmfWY1I-u4WVVwzGRlr5iBiieMJMYChg/file#?dl=1">Download</a></center>
-<center><a href="https://uc1b150a2bfc5fa3f6c3ffb27ea3.dl.dropboxusercontent.com/cd/0/get/AbxNo8hRct5c1C4AWbzWiCnHz1iDwaJ3WIHYTJS0WsiyRzn-TtVSaniFxpPnxWSDsnnQRJ2W7jbvXSLn6b9CGGg9rcauf6MvE07iSl1u8jvtAQ/file#?dl=1">Download source</a></center>
+<center><a href="https://www.mediafire.com/file/i9ecx7r3t4jiotc/BrowserSourceBeta.exe/file">Download</a></center>
+<center><a href="http://www.mediafire.com/file/8dwv3br4ii5ou2l/installerv1.zip/file">Download source</a></center>
 <center><img src="https://raw.githubusercontent.com/justatesting1/NotepadWeb/master/notcommonlydownloaded.PNG" alt="Not Commonly Downloaded"></center>
 <center>If you get this, click the ^ arrow and click Keep.</center>
 <center><img src="https://raw.githubusercontent.com/justatesting1/NotepadWeb/master/protected.PNG" alt="Windows protected your PC"></center>
